--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GithubUserApplication</string>
+    <string name="tab_1">Followers</string>
+    <string name="tab_2">Following</string>
 </resources>
